# Evolution-Sim-2.0

./: Cargo.toml  PROJECT_OVERVIEW.md  README.md  TODO.md
src/: main.rs
src/organisms/: behavior.rs  components.rs  ecosystem_stats.rs  genetics.rs  mod.rs  speciation.rs  systems.rs  tuning.rs
src/world/: cell.rs  chunk.rs  climate.rs  mod.rs  resources.rs  terrain.rs
